--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy>=1.21.0
 torch>=2.0.0
 torchvision>=0.15.0
-transformers>=4.30.0
+transformers
 fastapi>=0.68.0
 Pillow>=9.0.0
 uvicorn>=0.15.0
@@ -16,3 +16,6 @@ openai>=1.0.0
 python-dotenv>=0.19.0
 loadimg
 markitdown>=0.1.0a1
+scipy
+pdf2image
+marker-pdf[full]
